<resources>
    <string name="app_name">" Navigation View"</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_view_item_1">Navigation Item 1</string>
    <string name="navigation_view_item_2">Navigation Item 2</string>
    <string name="navigation_view_item_3">Navigation Item 3</string>
    <string name="navigation_view_item_4">Navigation Item 4</string>
    <string name="navigation_view_item_5">Navigation Item 5</string>
    <string name="navigation_view_item_6">Navigation Item 6</string>
    <string name="navigation_view_category_1">Navigation View Category</string>
    <string name="navigation_view_category_2">Navigation View Category</string>
    <string name="headerTxt">Android DrawerLayout/
             Navigation Drawer View Display Over the ActionBar/Toolbar/
        AppBar and Under the Status Bar Tutorial with Example and Source Code</string>
</resources>
