<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="all">
        <item
            android:id="@+id/navigation_item_1"
            android:checked="true"
            android:icon="@drawable/navigation_profile"
            android:title="@string/navigation_view_item_1"></item>
        <item
            android:id="@+id/navigation_item_2"
            android:icon="@drawable/navigation_profile"
            android:title="@string/navigation_view_item_2"></item>
    </group>

    <item
        android:id="@+id/navigation_view_category_2"
        android:title="@string/navigation_view_category_2">
        <menu>
            <item
                android:id="@+id/navigation_item_3"
                android:icon="@drawable/navigation_profile"
                android:title="@string/navigation_view_item_3"></item>
            <item
                android:id="@+id/navigation_item_4"
                android:icon="@drawable/navigation_profile"
                android:title="@string/navigation_view_item_4"></item>
            <item
                android:id="@+id/navigation_item_5"
                android:icon="@drawable/navigation_profile"
                android:title="@string/navigation_view_item_5"></item>
        </menu>
    </item>
    <item android:title="Social">
        <menu>
            <item
                android:icon="@drawable/navigation_profile"
                android:title="Share"></item>
            <item
                android:icon="@drawable/navigation_profile"
                android:title="Log Out"></item>
            <item
                android:icon="@drawable/navigation_profile"
                android:title="About"></item>
        </menu>
    </item>

</menu>